# Onshape-AI-Assistant

./: .coveragerc  Makefile  README.md  coverage.json  pyproject.toml  pytest.ini  requirements.txt  run_mcp_server.py
.github/workflows/: test.yml
docs/: DEV_SETUP.md  EDGE_QUERY_FEATURE.md  FEATURE_SUMMARY.md  GEAR_FEATURE.md  NEXT_STEPS_GEOMETRY_REFERENCES.md  ONSHAPE_API_IMPROVEMENTS.md  QUICK_START.md  SKETCH_PLANE_REFERENCE_GUIDE.md  TESTING.md  TEST_SUMMARY.md
onshape_mcp/: __init__.py  server.py
onshape_mcp/api/: __init__.py  client.py  documents.py  edges.py  partstudio.py  variables.py
onshape_mcp/builders/: __init__.py  extrude.py  fillet.py  gear.py  sketch.py  stepped_extrude.py  thicken.py
onshape_mcp/tools/: __init__.py
tests/: README.md  TEST_RESULTS.md  __init__.py  conftest.py  test_server.py
tests/api/: test_client.py  test_documents.py  test_partstudio.py  test_variables.py
tests/builders/: __init__.py  test_extrude.py  test_sketch.py  test_thicken.py
